--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,27 @@ layout: base
 
 {% include header.html type="page" %}
 
+{% assign postsInLang=site.posts | where:"lang", page.lang %}
+{% assign blogPostCount = 0 %}
+
+{% for post in postsInLang %}
+  {% if post.blog %}
+  {% assign blogPostCount = blogPostCount | plus: 1 %}
+  {% endif %}  
+{% endfor %}
+
 <div class="container" role="main">
   <div class="row">
+      {% if blogPostCount > 0 %}
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <h2 id="blog" class="blog-type-title">{{ site.uiResource[page.lang].blog_post }} ({{ blogPostCount }})</h2>
+        {{ content }}
+      </div>
+      {% endif %}	    
+  </div>
+  <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{ content }}
-	    {% if page.comments %}
+        {% if page.comments %}
         <div class="disqus-comments">
 	        {% include disqus.html %}
         </div>
