--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,30 +8,15 @@ layout: base
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
-      {% if page.gh-repo %}
-        {% assign gh_split =  page.gh-repo | split:'/'  %}
-        {% assign gh_user =  gh_split[0]  %}
-        {% assign gh_repo =  gh_split[1]  %}
-
-        <div id="header-gh-btns">
-          {% if page.gh-badge.size > 0 %}
-            {% for badge in page.gh-badge %}
-              {% case badge %}
-                {% when 'star'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=star&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'watch'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=watch&v=2&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'fork'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=fork&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'follow'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0" scrolling="0" width="220px" height="20px"></iframe>
-              {% endcase %}
-            {% endfor %}
-          {% endif %}
-        </div>
-      {% endif %}
-
       <article role="main" class="blog-post">
+          {% if page.progress == "only-planned" %}
+	        <h3 class="progress-status-warning alert alert-success">Bu blog yazısına henüz başlanmadı.</h3>
+	      {% elsif page.progress == "continues" %}
+	        <h3 class="progress-status-warning alert alert-danger">Bu blog yazısının hazırlanması devam ediyor.</h3>
+	      {% elsif page.progress == "finished-not-reviewed" %}
+	        <h3 class="progress-status-warning alert alert-warning">Bu blog yazısı bitti fakat henüz gözden geçirilmedi.</h3>
+        {% endif %}
+        
         {{ content }}
       </article>
 
@@ -53,17 +38,39 @@ layout: base
       {% endif %}
 
       <ul class="pager blog-pager">
-        {% if page.previous.url %}
-        <li class="previous">
-          <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>
-        </li>
-        {% endif %}
-        {% if page.next.url %}
-        <li class="next">
-          <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
-        </li>
-        {% endif %}
-      </ul>
+          {% for post in site.posts %}
+            {% if post.lang == page.lang %}
+              {% if post.blog %}
+                {% if prev %}
+                  <li class="previous">
+                    <a href="{{ post.url }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; {{ site.uiResource[page.lang].previous }}</a>
+                  </li>
+                {% endif %}
+                {% assign prev = false %}
+                {% if post.id == page.id %}
+                  {% assign prev = true %}
+                {% endif %}
+              {% endif %}
+            {% endif %}
+          {% endfor %}
+    
+          {% for post in site.posts reversed %}
+            {% if post.lang == page.lang %}
+              {% if post.blog %}
+                {% if next %}
+                  <li class="next">
+                    <a href="{{ post.url }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">{{ site.uiResource[page.lang].next }} &rarr;</a>
+                  </li>
+                  {% break %}
+                {% endif %}
+                {% assign next = false %}
+                {% if post.id == page.id %}
+                  {% assign next = true %}
+                {% endif %}
+              {% endif %} 
+            {% endif %}
+          {% endfor %}
+          </ul>
 
       {% if page.comments %}
         <div class="disqus-comments">
