--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@ layout: null
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 18px;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
   color: #404040;
   position: relative;
   background-color: {{ site.page-col }};
@@ -22,7 +22,7 @@ p {
   margin: 30px 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   font-weight: 800;
 }
 a {
@@ -59,7 +59,7 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   padding: 15px inherit;
 }
 
@@ -110,7 +110,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -292,7 +292,7 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans';
   text-align: center;
   margin-bottom: 0;
 }
@@ -316,13 +316,12 @@ footer .theme-by {
 /* --- Post preview --- */
 
 .post-preview {
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  padding: 2px 0;
 }
 
 @media only screen and (min-width: 768px) {
   .post-preview {
-    padding: 35px 0;
+    padding: 5px 0;
   }
 }
 
@@ -342,7 +341,7 @@ footer .theme-by {
 }
 
 .post-preview .post-title {
-  font-size: 30px;
+  font-size: 14px;
   margin-top: 0;
 }
 .post-preview .post-subtitle {
@@ -353,12 +352,30 @@ footer .theme-by {
 .post-preview .post-meta,
 .post-heading .post-meta {
   color: #808080;
-  font-size: 18px;
+  font-size: 16px;
   font-style: italic;
-  margin: 0 0 10px;
+  position: relative;
+}
+.post-preview .post-meta .post-level,
+.post-heading .post-meta .post-level {
+  position: absolute;
+  right: 10px;
+  display: inline-block;
+  border-bottom: 1px solid #eee;
+}
+
+.post-heading .post-meta .post-date {
+  position: absolute;
+  left: 10px;
+  display: inline-block;
+  border-bottom: 1px solid #eee;
 }
 .post-preview .post-entry {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
+}
+.post-preview .post-date {
+  font-size: 16px;
+  text-align: right;
 }
 .post-entry-container {
   display: inline-block;
@@ -388,7 +405,7 @@ footer .theme-by {
 
 @media only screen and (min-width: 768px) {
   .post-preview .post-title {
-    font-size: 36px;
+    font-size: 16px;
   }
 }
 
@@ -477,7 +494,7 @@ footer .theme-by {
 }
 .intro-header .page-heading h1 {
   margin-top: 0;
-  font-size: 50px;
+  font-size: 30px;
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
@@ -485,10 +502,10 @@ footer .theme-by {
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
-  font-size: 27px;
+  font-size: 16px;
   line-height: 1.1;
   display: block;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -513,7 +530,7 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   right: 0;
   bottom: 0;
   display: none;
@@ -530,10 +547,10 @@ footer .theme-by {
     padding: 150px 0;
   }
   .intro-header .page-heading h1 {
-    font-size: 80px;
+    font-size: 20px;
   }
   .intro-header .post-heading h1 {
-    font-size: 50px;
+    font-size: 26px;
   }
   .intro-header.big-img .img-desc {
     font-size: 14px;
@@ -597,7 +614,7 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'PT Serif', Georgia, Times, "Times New Roman", serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -781,4 +798,13 @@ td.gutter {
   color: #808080;
   font-style: italic;
   font-size: 16px;
+}
+.blog-type-title {
+  padding-top: 20px;
+  font-size: 18px;
+  margin-top: 0;
+  text-align: center;
+}
+.navbar-header .navbar-brand {
+  font-size: 12px;
 }
