--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -51,7 +51,7 @@
     {% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
     <div class="avatar-container">
       <div class="avatar-img-border">
-        <a href="{{ site.url }} ">
+        <a href="/">
           <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
         </a>
       </div>
